auto-gerated service key renewal service keys now have metadata used for dettection of previous auto-generated keys for renewal adopted new client adapter version